--- a/helm/zipper-s3/values.yaml
+++ b/helm/zipper-s3/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 job:
   name: "" # The name of the service, should be defined in the specific app-configs folder.
+eksCluster: false
 image:
   repository: coco/zipper-s3
   pullPolicy: IfNotPresent
