Limit number of jobs left on cluster

--- a/helm/zipper-s3/templates/job.yaml
+++ b/helm/zipper-s3/templates/job.yaml
@@ -9,6 +9,8 @@ metadata:
     app: {{ .Values.job.name }}
 spec:
   schedule: "0 4 * * *"
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
