Use serviceaccount for auth
Stop using AWS access/secret keys when the service is deployed in
k8s. Instead use AWS Roles to ServiceAccounts.

aws-sdk-go supports obtaining credentials automatically by using
AWS_WEB_IDENTITY_TOKEN_FILE and AWS_ROLE_ARN envvars (existing in the
pod already). For this reason the service is migrated away from
minio-go.

--- a/helm/zipper-s3/templates/job.yaml
+++ b/helm/zipper-s3/templates/job.yaml
@@ -20,6 +20,7 @@ spec:
             app: {{ .Values.job.name }}
             visualize: "true"
         spec:
+          serviceAccountName: {{ .Values.serviceAccountName }}
           containers:
           - name: {{ .Values.job.name }}
             image: "{{ .Values.image.repository }}:{{ .Chart.Version }}"
@@ -50,16 +51,6 @@ spec:
                 configMapKeyRef:
                   name: global-config
                   key: zipper.max.goroutines
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: global-secrets
-                  key: aws.access_key_id
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: global-secrets
-                  key: aws.secret_access_key
             - name: IS_ENABLED
               valueFrom:
                 configMapKeyRef:
