Add bucket region option
The service might be deployed in one region, but to be accessing bucket in
another.

--- a/helm/zipper-s3/templates/job.yaml
+++ b/helm/zipper-s3/templates/job.yaml
@@ -36,6 +36,11 @@ spec:
                 configMapKeyRef:
                   name: global-config
                   key: upp-exports-s3.bucket
+            - name: BUCKET_REGION
+              valueFrom:
+                configMapKeyRef:
+                  name: global-config
+                  key: upp-exports-s3.region
             - name: S3_CONCEPT_FOLDER
               valueFrom:
                 configMapKeyRef:
